--- a/ProjectManagementSystemAPI/appsettings.json
+++ b/ProjectManagementSystemAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ManagementTask;Integrated Security=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ProjectManagementSystem;TrustServerCertificate=true"
   }
 }
