--- a/ProjectManagementSystemAPI/appsettings.json
+++ b/ProjectManagementSystemAPI/appsettings.json
@@ -5,8 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "JWT": {
+    "ValidIssuer": "HotelReservationSystem",
+    "ValidAudiance": "HotelReservationSystem-Users",
+    "Key": "qPBB70yxYUSy5ievCLDNEItuIR69qBDhCcC7/8eFhhU=",
+    "DurationInMintues": 60
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ProjectManagementSystem;TrustServerCertificate=true"
+    "DefaultConnection": "Data Source=.;Initial Catalog=ManagementTask;Integrated Security=True;Trust Server Certificate=True;"
   }
 }
