--- a/ProjectManagementSystemAPI/appsettings.json
+++ b/ProjectManagementSystemAPI/appsettings.json
@@ -6,14 +6,8 @@
     }
   },
 
-  "JWT": {
-    "ValidIssuer": "HotelReservationSystem",
-    "ValidAudiance": "HotelReservationSystem-Users",
-    "Key": "qPBB70yxYUSy5ievCLDNEItuIR69qBDhCcC7/8eFhhU=",
-    "DurationInMintues": 60
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ManagementTask;Integrated Security=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ProjectManagementSystem;TrustServerCertificate=true"
   }
 }
