--- a/ProjectManagementSystemAPI/appsettings.json
+++ b/ProjectManagementSystemAPI/appsettings.json
@@ -15,5 +15,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=ManagementTask;Integrated Security=True;Trust Server Certificate=True;"
+  },
+  "MailSettings": {
+    "Email": "osamaelmagdoub@outlook.com",
+    "DisplayName": "Osama",
+    "Password": "123456789+Pm",
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587
   }
 }
