--- a/ProjectManagementSystemAPI/ProjectManagementSystemAPI.csproj
+++ b/ProjectManagementSystemAPI/ProjectManagementSystemAPI.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
     <Folder Include="CQRS\Tasks\Queries\" />
+    <Folder Include="CQRS\UserRoles\Commands\" />
+    <Folder Include="CQRS\UserRoles\Queries\" />
   </ItemGroup>
 
 </Project>
